@@ -44,6 +44,7 @@ import static org.junit.Assume.assumeFalse;
 import static org.junit.Assume.assumeTrue;
 
 import android.app.ActivityManager;
+import android.app.admin.DevicePolicyManager;
 import android.content.Context;
 import android.content.Intent;
 import android.content.IntentFilter;
@@ -1261,7 +1262,9 @@ public final class DeviceState extends HarrierRule {
             if (annotation instanceof EnsureHasNoAccounts) {
                 EnsureHasNoAccounts ensureHasNoAccountsAnnotation =
                         (EnsureHasNoAccounts) annotation;
-                ensureHasNoAccounts(ensureHasNoAccountsAnnotation.onUser());
+                ensureHasNoAccounts(ensureHasNoAccountsAnnotation.onUser(),
+                        ensureHasNoAccountsAnnotation.allowPreCreatedAccounts(),
+                        ensureHasNoAccountsAnnotation.failureMode());
                 continue;
             }
 
@@ -2835,7 +2838,8 @@ public final class DeviceState extends HarrierRule {
             ensureCanGetPermission(INTERACT_ACROSS_USERS_FULL);
         }
 
-        ensureHasNoAccounts(UserType.ANY);
+        ensureHasNoAccounts(UserType.ANY, /* allowPreCreatedAccounts= */ true,
+                FailureMode.FAIL);
         ensureTestAppInstalled(RemoteDevicePolicyManagerRoleHolder.sTestApp, user);
         TestApis.devicePolicy().setDevicePolicyManagementRoleHolder(
                 RemoteDevicePolicyManagerRoleHolder.sTestApp.pkg(), user);
@@ -3135,10 +3139,12 @@ public final class DeviceState extends HarrierRule {
             }
 
             if (Versions.meetsMinimumSdkVersionRequirement(Versions.U)) {
-                ensureHasNoAccounts(UserType.ANY);
+                ensureHasNoAccounts(UserType.ANY, /* allowPreCreatedAccounts= */ true,
+                        FailureMode.FAIL);
             } else {
                 // Prior to U this only checked the system user
-                ensureHasNoAccounts(UserType.SYSTEM_USER);
+                ensureHasNoAccounts(UserType.SYSTEM_USER, /* allowPreCreatedAccounts= */ true,
+                        FailureMode.FAIL);
             }
             ensureHasNoProfileOwner(userReference);
 
@@ -3252,7 +3258,8 @@ public final class DeviceState extends HarrierRule {
                 mChangedProfileOwners.put(user, currentProfileOwner);
             }
 
-            ensureHasNoAccounts(user);
+            ensureHasNoAccounts(user, /* allowPreCreatedAccounts= */ true,
+                    FailureMode.FAIL);
 
             if (resolvedDpcTestApp != null) {
                 mProfileOwners.put(user,
@@ -3265,10 +3272,12 @@ public final class DeviceState extends HarrierRule {
         }
 
         if (Versions.meetsMinimumSdkVersionRequirement(Versions.U)) {
-            ensureHasNoAccounts(user);
+            ensureHasNoAccounts(user, /* allowPreCreatedAccounts= */ true,
+                    FailureMode.FAIL);
         } else {
             // Prior to U this incorrectly checked the system user
-            ensureHasNoAccounts(UserType.SYSTEM_USER);
+            ensureHasNoAccounts(UserType.SYSTEM_USER, /* allowPreCreatedAccounts= */ true,
+                    FailureMode.FAIL);
         }
 
         if (isPrimary) {
@@ -4021,14 +4030,14 @@ public final class DeviceState extends HarrierRule {
                         .findFirst();
 
         if (account.isPresent()) {
-            accounts(onUser).setFeatures(account.get(), Set.of(features));
+            accounts(onUser).setFeatures(account.get(), new HashSet<>(Arrays.asList(features)));
             mAccounts.put(key, account.get());
             TestApis.devicePolicy().calculateHasIncompatibleAccounts();
             return account.get();
         }
 
         AccountReference createdAccount = accounts(onUser).addAccount()
-                .features(Set.of(features))
+                .features(new HashSet<>(Arrays.asList(features)))
                 .add();
         mCreatedAccounts.add(createdAccount);
         mAccounts.put(key, createdAccount);
@@ -4045,15 +4054,19 @@ public final class DeviceState extends HarrierRule {
         }
     }
 
-    private void ensureHasNoAccounts(UserType userType) {
+    private void ensureHasNoAccounts(UserType userType, boolean allowPreCreatedAccounts,
+            FailureMode failureMode) {
         if (userType == UserType.ANY) {
-            TestApis.users().all().forEach(this::ensureHasNoAccounts);
+            TestApis.users().all().forEach(user -> ensureHasNoAccounts(user,
+                    allowPreCreatedAccounts, failureMode));
         } else {
-            ensureHasNoAccounts(resolveUserTypeToUser(userType));
+            ensureHasNoAccounts(resolveUserTypeToUser(userType),
+                    allowPreCreatedAccounts, failureMode);
         }
     }
 
-    private void ensureHasNoAccounts(UserReference user) {
+    private void ensureHasNoAccounts(UserReference user, boolean allowPreCreatedAccounts,
+            FailureMode failureMode) {
         if (REMOTE_ACCOUNT_AUTHENTICATOR_TEST_APP.pkg().installedOnUser(user)) {
             user.start(); // The user has to be started to remove accounts
 
@@ -4061,9 +4074,25 @@ public final class DeviceState extends HarrierRule {
                     .forEach(AccountReference::remove);
         }
 
-        if (!TestApis.accounts().all(user).isEmpty()) {
-            throw new NeneException("Expected no accounts on user " + user
-                    + " but there was some that could not be removed");
+        Set<AccountReference> accounts = TestApis.accounts().all(user);
+
+        // If allowPreCreatedAccounts is enabled, that means it's okay to have
+        // pre created accounts on the device.
+        // Now to EnsureHasNoAccounts we will only check that there are no non-pre created accounts.
+        // Non pre created accounts either have ACCOUNT_FEATURE_DEVICE_OR_PROFILE_OWNER_DISALLOWED
+        // or do not have ACCOUNT_FEATURE_DEVICE_OR_PROFILE_OWNER_ALLOWED
+        if (allowPreCreatedAccounts) {
+            accounts = accounts.stream()
+                    .filter(accountReference -> !accountReference.hasFeature(
+                            DevicePolicyManager.ACCOUNT_FEATURE_DEVICE_OR_PROFILE_OWNER_ALLOWED)
+                            || accountReference.hasFeature(
+                            DevicePolicyManager.ACCOUNT_FEATURE_DEVICE_OR_PROFILE_OWNER_DISALLOWED))
+                    .collect(Collectors.toSet());
+        }
+
+        if (!accounts.isEmpty()) {
+            failOrSkip("Expected no user created accounts on user " + user
+                    + " but there was some that could not be removed.", failureMode);
         }
 
         TestApis.devicePolicy().calculateHasIncompatibleAccounts();
@@ -4153,7 +4182,7 @@ public final class DeviceState extends HarrierRule {
     private boolean trySetUserRestrictionWithDeviceOwner(String restriction) {
         ensureHasDeviceOwner(FailureMode.FAIL,
                 /* isPrimary= */ false, EnsureHasDeviceOwner.HeadlessDeviceOwnerType.NONE,
-                /* affiliationIds= */ Set.of(), /* type= */ DeviceOwnerType.DEFAULT,
+                /* affiliationIds= */ new HashSet<>(), /* type= */ DeviceOwnerType.DEFAULT,
                 EnsureHasDeviceOwner.DEFAULT_KEY, new TestAppProvider().query());
 
         RemotePolicyManager dpc = deviceOwner();
@@ -4171,7 +4200,7 @@ public final class DeviceState extends HarrierRule {
     private boolean trySetUserRestrictionWithProfileOwner(UserReference onUser, String restriction) {
         ensureHasProfileOwner(onUser,
                 /* isPrimary= */ false, /* isParentInstance= */ false,
-                /* affiliationIds= */ Set.of(), EnsureHasProfileOwner.DEFAULT_KEY,
+                /* affiliationIds= */ new HashSet<>(), EnsureHasProfileOwner.DEFAULT_KEY,
                 new TestAppProvider().query());
 
         RemotePolicyManager dpc = profileOwner(onUser);
@@ -4189,7 +4218,7 @@ public final class DeviceState extends HarrierRule {
     private boolean tryClearUserRestrictionWithDeviceOwner(String restriction) {
         ensureHasDeviceOwner(FailureMode.FAIL,
                 /* isPrimary= */ false, EnsureHasDeviceOwner.HeadlessDeviceOwnerType.NONE,
-                /* affiliationIds= */ Set.of(), /* type= */ DeviceOwnerType.DEFAULT,
+                /* affiliationIds= */ new HashSet<>(), /* type= */ DeviceOwnerType.DEFAULT,
                 EnsureHasDeviceOwner.DEFAULT_KEY, new TestAppProvider().query());
 
         RemotePolicyManager dpc = deviceOwner();
@@ -4207,7 +4236,7 @@ public final class DeviceState extends HarrierRule {
     private boolean tryClearUserRestrictionWithProfileOwner(UserReference onUser, String restriction) {
         ensureHasProfileOwner(onUser,
                 /* isPrimary= */ false, /* isParentInstance= */ false,
-                /* affiliationIds= */ Set.of(), EnsureHasProfileOwner.DEFAULT_KEY,
+                /* affiliationIds= */ new HashSet<>(), EnsureHasProfileOwner.DEFAULT_KEY,
                 new TestAppProvider().query());
 
         RemotePolicyManager dpc = profileOwner(onUser);
